	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk
# (r1010)
 * introduced the 'list "swap"' command.
# (r1009)
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works.
# (r1008)
 * switch --read-from-stdin-elds supports now the ASCII NUL terminator (via '').
# (r1007)
 * switch -V (--version) will print out libspectre version info.
# (r1006)
 * switch -V (--version) will print to stdout (not anymore to stderr).
# (r1004)
 * introduced 'list "dumpmarked"' and 'list "unmarkall"' commands.
# (r1003)
 * the -B switch is now short for --background-recursive.
# (r1002)
 * the -S switch is now short for --image-descriptions-file-separator (not anymore for --sanity-check).
# (r1001)
 * the -D switch is now short for --load-image-descriptions-file (not anymore for --dump-default-fimrc).
# (r999,r1000)
 * introduced -L/--read-from-file switch: read an image list from file (similarly to the - switch).
# (r971)
 * introduced new variable _cache_control to control the cache mechanism
 * now caching of mipmaps on by default; can be turned off with _cache_control
# (r965)
 * if _push_pushes_dirs is 2, will also push hidden files and directories; that is,
   ones whose names begin with a dot (.)
# (r963)
 * if configure'ing with --enable-c++11, the --background-recursive switch will load
   images in the background recursively, allowing viewing in the order they appear.
  (FIXME: so far synchronization during loading is missing.)
# (r961)
 * renamed configure switch --enable-cxx11 to --enable-c++11
# (r955)
  * i:_file_load_time will store the time taken to load the file and decode the image.
# (r952)
 * _use_mipmaps=2 will compute the mipmaps faster, using every fourth source pixel.
   This can be a good solution for photographs.
# (r948)
 * if configure'ing with --enable-c++11, background image loading will be available
  (FIXME: need controlling variable, need to handle failed loads)