@@ -2,6 +2,8 @@
 	FIM NEWS -- history of (main) user-visible changes in FIM.
 
                 Version 0.6-trunk
+# (r1011)
+ * fix: removed obsolete documentation for the "window" command, now disabled.
 # (r1010)
  * introduced the 'list "swap"' command.
 # (r1009)
